--- a/UserUI/index.html
+++ b/UserUI/index.html
@@ -17,7 +17,7 @@
       }
     </style>
 
-    <title>React App</title>
+    <title>Jewelry Auction</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css"
