--- a/ManagerUI/index.html
+++ b/ManagerUI/index.html
@@ -8,14 +8,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <style>
+    <!-- <style>
       @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
       </style>
     <style>
       *{
         font-family: "Nunito", sans-serif;
       }
-    </style>
+    </style> -->
 
     <title>Jewelry Auction Manage site</title>
   </head>
@@ -23,7 +23,7 @@
 
   
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
