Add: View upcoming auction session details

--- a/UserUI/index.html
+++ b/UserUI/index.html
@@ -9,7 +9,6 @@
       content="Web site created using create-react-app"
     />
     <title>Jewelry Auction</title>
-
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
     </style>
@@ -18,7 +17,6 @@
         font-family: "Cormorant SC";
       }
     </style>
-
     <link
       rel="stylesheet"
       href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -28,29 +26,8 @@
       href="https://unpkg.com/bs-brain@2.0.4/components/navbars/navbar-1/assets/css/navbar-1.css"
     />
   </head>
-
-  <body>
-    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
+  <body style="transform: none">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
-
-  <script src="https://unpkg.com/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </html>
-
-<!-- /* TEAM 6 - SWP */
-
-position: absolute;
-width: 196px;
-height: 29px;
-left: calc(50% - 196px/2);
-top: 24px;
-
-font-family: ;
-font-style: normal;
-font-weight: 400;
-font-size: 27px;
-line-height: 33px;
-text-align: center;
-
-color: #000000; -->
