--- a/UserUI/index.html
+++ b/UserUI/index.html
@@ -13,6 +13,8 @@
   <style>
     * {
       font-family: "Cormorant SC";
+      margin: 0;
+      padding: 0;
     }
   </style>
   <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
