update buy_now attribute

--- a/UserUI/index.html
+++ b/UserUI/index.html
@@ -16,6 +16,12 @@
       margin: 0;
       padding: 0;
     }
+
+    html,
+    body {
+      scroll-behavior: smooth;
+      height: 100%;
+    }
   </style>
   <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/navbars/navbar-1/assets/css/navbar-1.css" />
