--- a/UserUI/index.html
+++ b/UserUI/index.html
@@ -20,7 +20,7 @@
     html,
     body {
       scroll-behavior: smooth;
-      height: 100%;
+      /* height: 100%; */
     }
   </style>
   <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
