--- a/UserUI/index.html
+++ b/UserUI/index.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>Jewelry Auction</title>
+  <link rel="icon" href="/src/assets/logo/small_logo.png" />
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
   </style>
