--- a/UserUI/index.html
+++ b/UserUI/index.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <title>Jewelry Auction</title>
+    <link rel="icon" href="/src/assets/logo/small_logo.png" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+    </style>
+    <style>
+      * {
+        font-family: "Cormorant SC";
+        margin: 0;
+        padding: 0;
+      }
+      html,
+      body {
+        scroll-behavior: smooth;
+        /* height: 100%; */
+      }
+    </style>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/bs-brain@2.0.4/components/navbars/navbar-1/assets/css/navbar-1.css"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <title>Jewelry Auction</title>
-  <link rel="icon" href="/src/assets/logo/small_logo.png" />
-  <style>
-    @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
-  </style>
-  <style>
-    * {
-      font-family: "Cormorant SC";
-      margin: 0;
-      padding: 0;
-    }
-
-    html,
-    body {
-      scroll-behavior: smooth;
-      /* height: 100%; */
-    }
-  </style>
-  <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.4/components/navbars/navbar-1/assets/css/navbar-1.css" />
-</head>
-
-<body style="transform: none">
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="text/javascript">
-
-  </script>
-</body>
-
+  <body style="transform: none">
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript"></script>
+  </body>
 </html>
